Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language **

***	Verilog::Parser and Verilog::SigParser objects must call the eof method
	to insure forward compatibility.

****	Fix --help to use Pod::Usage instead of depreciated pod2text.

* Verilog::Language 2.373 2007/04/02

***     Fix vppp breaking with Getopt::Long 2.36.  [Andreas J. König]

****	Fix modules without any ports causing lost declarations.  [Mark Nodine]

* Verilog::Language 2.372 2007/02/28

***	Add include_open_nonfatal option to Preproc and Netlist.  [Eric Miller]

****	Fix bug24552; Verilog::Module::new_net now defaults net type
	to 'wire'. [Takeo Komiyama]

* Verilog::Language 2.371 2007/01/23

***	Fix bug24345; supply statements cause lint warnings.  [Jeff Trull]

* Verilog::Language 2.370 2007/01/10

***	Fix bug24248; reg/tri/supply* declarations, etc are now stored in Net
	structures as the declared type, instead of as 'wire'.  [Jeff Trull]

***	Fix bug13462; parse {} concatenations in pin connections. [Jeff Trull]

***	Remove backslashes in quoted symbols when they aren't needed.

****	Fix vpm deleting output when file moved between directories.

* Verilog::Language 2.361 2006/10/02

**	Attach Verilog comments to Netlist objects.  [Monte Becker]

***	Add parameters to Verilog::Parser instant callback.  [Monte Becker]

* Verilog::Language 2.360 2006/09/14

***	Added Preproc keep_whitespace=>0 option to delete whitespace.

***	Preprocessor now strips all DOS carrage returns.

***	Allow Verilog::Getopt::file_path to resolve module_dir and/or incdirs.
	Use only module_dir to resolve Netlist modules.  [by John Tseng]

****    Vrename --crypt now uses lower case random identifiers for readability.

****	Fix DOS carrage returns in multiline defines.  [Ralf Karge]

* Verilog::Language 2.352 2006/08/22
