@@ -43,8 +43,8 @@ Verilog Language.  General functions will be added as needed.
 =item Verilog::Language::is_keyword ($symbol_string)
 
 Return true if the given symbol string is a Verilog reserved keyword.
-Value indicates the language standard, 1995, 2001, or sv31 for
-SystemVerilog 3.1.
+Value indicates the language standard as per the `begin_keywords macro,
+'1364-1995', '1364-2001', '1364-2005', or '1800-2005'.
 
 =item Verilog::Language::is_compdirect ($symbol_string)
 
@@ -53,8 +53,9 @@ Return true if the given symbol string is a Verilog compiler directive.
 =item Verilog::Language::language_standard ($year)
 
 Sets the language standard to indicate what are keywords.  If undef, all
-standards apply.  1995 sets only Verilog 1995, 2001 sets Verilog 2001, and
-'sv31' sets SystemVerilog 3.1.
+standards apply.  The year is indicates the language standard as per the
+`begin_keywords macro, '1364-1995', '1364-2001', '1364-2005', or
+'1800-2005'.
 
 =item Verilog::Language::number_bits ($number_string)
 
@@ -143,34 +144,38 @@ foreach my $kwd (qw(
 		    pmos posedge primitive pull0 pull1 pulldown
 		    pullup rcmos real realtime reg release repeat
 		    rnmos rpmos rtran rtranif0 rtranif1 scalared
-		    signed small specify strength strong0 strong1
+		    small specify strength strong0 strong1
 		    supply0 supply1 table task time tran tranif0
 		    tranif1 tri tri0 tri1 triand trior trireg
 		    vectored wait wand weak0 weak1 while wire wor
 		    xnor xor
-		    )) { $Keywords{1995}{$kwd} = 1995; }
+		    )) { $Keywords{'1364-1995'}{$kwd} = '1364-1995'; }
 
 foreach my $kwd (qw(
 		    automatic cell config design edge endconfig endgenerate
-		    generate genvar ifnone instance liblist localparam
+		    generate genvar ifnone incdir include instance liblist
+		    library localparam
 		    noshowcancelled pulsestyle_ondetect pulsestyle_onevent
 		    showcancelled signed specparam unsigned use
-		    )) { $Keywords{2001}{$kwd} = 2001; }
+		    )) { $Keywords{'1364-2001'}{$kwd} = '1364-2001'; }
 
 foreach my $kwd (qw(
-		    alias always_comb always_ff always_latch assert
-		    assert_strobe before bind bit break byte chandle class
-		    clocking const constraint context continue cover dist
-		    do endcass endclocking endinterface endprogram
-		    endproperty endsequence enum export extends extern
-		    final first_match forkjoin iff import inside int
-		    interface intersect join_any join_none local logic
-		    longint modport new null packed priority program
-		    property protexted pure rand randc ref sequence
-		    shortint shortreal solve static string struct super
-		    this throughout timeprecision timeunit type typedef
-		    union unique var virtual void wait_order with within
-		    )) { $Keywords{sv31}{$kwd} = 'sv31'; }
+		    alias always_comb always_ff always_latch assert assume
+		    before bind bins binsof bit break byte chandle class
+		    clocking const constraint context continue cover
+		    covergroup coverpoint cross dist do endcass endclocking
+		    endgroup endinterface endpackage endprogram endproperty
+		    endsequence enum expect export extends extern final
+		    first_match foreach forkjoin iff ignore_bins
+		    illegal_bins import inside int interface intersect
+		    join_any join_none local logic longint matches modport
+		    new null package packed priority program property
+		    protected pure rand randc randcase randsequence ref
+		    return sequence shortint shortreal solve static string
+		    struct super tagged this throughout timeprecision
+		    timeunit type typedef union unique var virtual void
+		    wait_order wildcard with within
+		    )) { $Keywords{'1800-2005'}{$kwd} = '1800-2005'; }
 
 foreach my $kwd (
 		 "`celldefine", "`default_nettype", "`define", "`else",
@@ -179,14 +184,14 @@ foreach my $kwd (
 		 "`unconnected_drive", "`undef",
 		 # Commercial Extensions
 		 "`protected", "`endprotected",
-		 ) { $Keywords{$kwd}{1995} = $Compdirect{$kwd} = 1995; }
+		 ) { $Keywords{$kwd}{'1364-1995'} = $Compdirect{$kwd} = '1364-1995'; }
 
 foreach my $kwd (
 		 "`default_nettype", "`elsif", "`undef", "`ifndef",
 		 "`file", "`line",
-		 ) { $Keywords{$kwd}{2001} = $Compdirect{$kwd} = 2001; }
+		 ) { $Keywords{$kwd}{'1364-2001'} = $Compdirect{$kwd} = '1364-2001'; }
 
-language_standard ('sv31');  # Default standard
+language_standard ('1800-2005');  # Default standard
 
 ######################################################################
 #### Keyword utilities
@@ -195,15 +200,19 @@ sub language_standard {
     my $standard = shift;
     if (defined $standard) {
 	my @subsets;
-	if ($standard eq '1995') {
-	    $Standard = $standard;
-	    @subsets = qw(1995);
-	} elsif ($standard eq '2001') {
-	    $Standard = $standard;
-	    @subsets = qw(1995 2001);
-	} elsif ($standard eq 'sv31') {
-	    $Standard = $standard;
-	    @subsets = qw(1995 2001 sv31);
+	if ($standard eq '1995' || $standard eq '1364-1995') {
+	    $Standard = '1364-1995';
+	    @subsets = ('1364-1995');
+	} elsif ($standard eq '2001' || $standard eq '1364-2001' || $standard eq '1364-2001-noconfig'
+		 || $standard eq '1364-2005') {
+	    $Standard = '1364-2001';
+	    @subsets = ('1364-2001', '1364-1995');
+	} elsif ($standard eq '1364-2005') {
+	    $Standard = '1364-2005';
+	    @subsets = ('1364-2005', '1364-2001', '1364-1995');
+	} elsif ($standard eq 'sv31' || $standard eq '1800-2005') {
+	    $Standard = '1800-2005';
+	    @subsets = ('1800-2005', '1364-2005', '1364-2001', '1364-1995');
 	} else {
 	    croak "%Error: Verilog::Language::language_standard passed bad value: $standard,";
 	}
